--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Binary Search Tree/BST - Recursion/108. Convert Sorted Array to Binary Search Tree.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Binary Search Tree/BST - Recursion/108. Convert Sorted Array to Binary Search Tree.md
@@ -77,3 +77,165 @@ class Solution {
 }
 ```
 
+
+`` 2nd ``
+
+```
+
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+ 
+class Solution {
+    int ans =-1;
+    int count =1;
+    public int kthSmallest(TreeNode root, int k) {
+       inOrder(root,k);
+        return ans;
+    }
+   
+    public void inOrder(TreeNode root, int k){
+        if(root==null) return;
+        if(count>k)return;
+        inOrder(root.left,k);
+        if(count==k){
+             ans = root.val;
+             count++;
+             return;
+        }else{
+            count++;
+        }
+        inOrder(root.right,k);
+    }
+}
+
+```
+
+
+
+`` 3rd ``
+
+```
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    public int kthSmallest(TreeNode root, int k) {
+      ArrayList<Integer> ans = new ArrayList<>(); 
+        Inorder(root,ans);
+        int res = ans.get(k-1);
+        return res;
+    }
+    public void Inorder(TreeNode root, ArrayList<Integer>list){
+        if(root==null) return;
+        Inorder(root.left,list);
+        list.add(root.val);
+        Inorder(root.right,list);
+    }
+}
+
+```
+
+
+`` 4th``
+
+```
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+    public int kthSmallest(TreeNode root, int k) {
+      ArrayList<Integer> ans = new ArrayList<>(); 
+        Inorder(root,ans);
+        Collections.sort(ans, Collections.reverseOrder());
+        int res = ans.get(ans.size()-k);
+        return res;
+    }
+    public void Inorder(TreeNode root, ArrayList<Integer>list){
+        if(root==null) return;
+        Inorder(root.left,list);
+        list.add(root.val);
+        Inorder(root.right,list);
+    }
+}
+
+```
+
+
+
+
+`` 5th ``
+
+```
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
+ * }
+ */
+class Solution {
+         PriorityQueue<Integer> Pqueue = new PriorityQueue<>();
+    public int kthSmallest(TreeNode root, int k) {   
+        search(root);
+        for(int i =1; i<k; i++){
+            Pqueue.remove();
+        }
+        return Pqueue.remove();
+    }
+    public void search(TreeNode root){
+        if(root ==null){
+            return;
+        }
+        Pqueue.add(root.val);
+        search(root.left);
+        search(root.right);
+    }
+}
+
+```
+
