--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/1207. Unique Number of Occurrences.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/1207. Unique Number of Occurrences.md
@@ -103,3 +103,38 @@ class Solution {
 ```
 
 
+
+``Scanner Input``
+
+```
+import java.util.*;
+
+public class Main {
+    public static void main(String[] args) {
+     Scanner sc = new Scanner(System.in);
+     int n = sc.nextInt();
+     int[] arr= new int[n];
+     for(int i=0; i<n; i++){
+       arr[i] = sc.nextInt();
+     }
+     
+    boolean isFound=  isUnique(arr,n);
+    System.out.println(isFound);
+     
+  }
+  private static boolean isUnique(int[] arr, int n){
+    
+    HashMap<Integer,Integer>map = new HashMap<>();
+    
+    for(int i=0; i<n; i++){
+      map.put(arr[i],map.getOrDefault(arr[i],0)+1);
+    }
+    
+    HashSet<Integer> set = new HashSet<>();
+    
+    for(int el:map.values()) set.add(el);
+    
+    return (set.size()==map.size());
+  }
+}
+```
