closest elements heap PQ

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Heap/658. Find K Closest Elements.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Heap/658. Find K Closest Elements.md
@@ -74,3 +74,123 @@ class Solution {
 }
 ​
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+`` external ``
+
+``Java - Two Pointers (With Explanation)``
+```Java
+class Solution {
+    
+    // Approach:
+    // Using two pointers, we are going the 'start' and 'end' pointers towards each other,
+    // until only k elements between 'start' and 'end'.
+    
+    public List<Integer> findClosestElements(int[] arr, int k, int x) {
+        
+        int start = 0;
+        int end = arr.length - 1;
+        // Between the 'start' and 'end' pointers, inclusive, contains all the k integers that is closest to x.
+        while (end - start >= k) {
+            // Move 'start' to the right if 'end' is closer to x, or move 'end' to the left if 'start' is closer to x.
+            if (Math.abs(arr[start] - x) > Math.abs(arr[end] - x)) {
+                start++;
+            } else {
+                end--;
+            }
+        }
+
+        // Input all the k closest integers into the result.
+        List<Integer> result = new ArrayList<>(k);
+        for (int i = start; i <= end; i++) {
+            result.add(arr[i]);
+        }
+        return result;
+    }
+}
+```
+
+
+``Java - Binary Search (With Explanation)``
+```Java
+class Solution {
+
+    // Approach:
+    // Using binary search and a sliding window, find the midpoint where,
+    // the integers between midpoint and midpoint + k is the k closest integers to x.
+
+    public List<Integer> findClosestElements(int[] arr, int k, int x) {
+
+        // The sliding window is between 'mid' and 'mid' + k.
+        int left = 0, right = arr.length - k;
+        while (left < right) {
+            int midpoint = left + (right - left) / 2; // same as (left + right) / 2
+
+            // With midpoint on the left, we use x - arr[midpoint], while arr[midpoint + k] - x because it is on the right.
+            // This is important!
+            // Rather than using Math.abs(), we need the direction keep the x within the sliding window.
+            // If the window is too far left, we shift the window to the right.
+            if (x - arr[midpoint] > arr[midpoint + k] - x) {
+                left = midpoint + 1;
+            }
+            // If the window is too far right, we shift the window to the left.
+            else {
+                right = midpoint;
+            }
+        }
+
+        // Input all the k closest integers into the result.
+        List<Integer> result = new ArrayList<>(k);
+        for (int i = left; i < left + k; i++) {
+            result.add(arr[i]);
+        }
+        return result;
+    }
+}
+```
+
+``Java - Priority Queue (With Explanation)``
+```Java
+class Solution {
+
+    // Approach:
+    // Using a min heap priority queue, add all the smallest integers up to k integers.
+    // Then, traverse the 'arr' array will replacing the priority queue with integer closer to x.
+
+    public List<Integer> findClosestElements(int[] arr, int k, int x) {
+        
+        PriorityQueue<Integer> minHeap = new PriorityQueue<>();
+        // Traverse the array with,
+        // First, add all the smallest integers up to k number.
+        // Second, if found a closer integer to x, remove the smallest integer from the priority queue, and add the new integer.
+        // This is because the smallest integer is always the further to x, if a larger number is closer to x.
+        for (int integer : arr) {
+            if (k > 0) {
+                minHeap.offer(integer);
+                k--;
+            } else if (Math.abs(minHeap.peek() - x) > Math.abs(integer - x)) {
+                minHeap.poll();
+                minHeap.offer(integer);
+            }
+        }
+        
+        // Add the integers from the priority queue to the result.
+        // This will automatically add in ascending order, from smallest to largest k integers closest to x.
+        List<Integer> result = new ArrayList<>();
+        while (!minHeap.isEmpty()) {
+            result.add(minHeap.poll());
+        }
+        return result;
+    }
+}
+```
