--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Heap/451. Sort Characters By Frequency.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Heap/451. Sort Characters By Frequency.md
@@ -75,3 +75,85 @@ class Solution {
     }
 }
 ```
+
+``without string builder high ms. ``
+
+```java
+Runtime: 2736 ms, faster than 5.01% of Java online submissions for Sort Characters By Frequency.
+Memory Usage: 795.4 MB, less than 5.03% of Java online submissions for Sort Characters By Frequency.
+``
+
+```Java
+class Solution {
+    public String frequencySort(String s) {
+        HashMap<Character,Integer> map = new HashMap<>();
+        
+        for(char ch: s.toCharArray()){
+            map.put(ch,map.getOrDefault(ch,0)+1);
+        }
+        
+      PriorityQueue <Character> pq = new PriorityQueue((a,b) -> map.get(b) - map.get(a));
+
+        for(char ch:map.keySet()){
+            pq.offer(ch);
+        }
+        
+        String ans ="";
+
+        while(!pq.isEmpty()){
+            char ch = pq.poll();
+            for(int i=0; i<map.get(ch); i++){
+                ans+=ch;
+            }
+        }
+        return ans;
+    }
+}
+
+```
+
+
+
+`` another``
+
+```java
+class Solution {
+    public String frequencySort(String s) {
+        Map<Character, Integer> map = new HashMap<>();
+        
+        for(char c : s.toCharArray()){
+            map.put(c, map.getOrDefault(c,0)+1);
+        }
+        
+        PriorityQueue<Character> pq = new PriorityQueue<>((a,b) -> map.get(b) - map.get(a));
+        
+        pq.addAll(map.keySet());
+        
+        StringBuilder output = new StringBuilder();
+        
+        while(!pq.isEmpty()){
+            char curr = pq.poll();
+            for(int i = 0; i < map.get(curr); i++){
+                output.append(curr);
+            }
+        }
+        return output.toString();
+    }
+}
+``
+``(a,b) -> map.get(b) - map.get(a). This is lambda expression in Java 8. I recommended writting it like this (a,b) -> map.get(b).compareTo( map.get(a)) to avoid overflow!``
+
+
+
+
+
+
+`` tips``
+
+```java
+//Time Complexity O(N);
+//For easy understanding made a comparator that compares on the basis of string length
+//Used StringBuffer instead of String so that no new instance of String is created while appending 
+//Used HashMap for frequency of each character
+// Faster Than 70% both space and time wise
+```
