--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/240. Search a 2D Matrix II.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/240. Search a 2D Matrix II.md
@@ -64,3 +64,27 @@ class Solution {
 }
 ```
 
+
+```java
+class Solution {
+    public boolean searchMatrix(int[][] matrix, int target) {
+               int i=0;
+        int j= matrix[0].length-1;
+        
+        while(i<matrix.length && j>=0){
+
+        if(matrix[i][j]==target){
+            return true;
+        }
+        if(matrix[i][j]>target){
+            j--;
+        }else{
+            i++;
+        }
+        }
+        
+        return false;
+    }
+}
+```
+
