Binary Search Optimal

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/74. Search a 2D Matrix.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/74. Search a 2D Matrix.md
@@ -77,9 +77,9 @@ class Solution {
             return true;
         }
         if(matrix[i][j]>target){
-            j--;
+            j--;                    // moving left.
         }else{
-            i++;
+            i++;                    // moving bottom.
         }
         }
         
