--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/74. Search a 2D Matrix.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/74. Search a 2D Matrix.md
@@ -89,4 +89,132 @@ class Solution {
 ```
 
 
+`` Optimal binary Search ``
 
+`` optimal Binary Search n*m matrix = > TC = O(log2(n*m))  SC = O(1);
+`` TC log2( n * m ) ``
+
+```java
+class Solution {
+    public boolean searchMatrix(int[][] matrix, int target) {
+        // edge case matrix is empty.
+        if(matrix.length==0) return false;
+        
+        int row = matrix.length;
+        int col = matrix[0].length;
+        
+        int low = 0;
+        int high = (row*col)-1;  // last imaginary index.
+        
+        while(low<=high){
+            int mid = (low+(high-low)/2);           // imaginary mid.
+            if(matrix[mid/col][mid%col]==target){           // ex. mid/col 2/4  = 0. mid%/col 2%/4 = 2; (0,2)== target . 0 row 2nd col.
+                return true;
+            }else if(matrix[mid/col][mid%col]>target){
+                high = mid-1;
+            }else{
+                low = mid+1;
+            }
+        }
+        return false;
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+`` many approaches for reference to learn others way also doing this ```
+
+```java
+Some of these are syntactic sugar of course. Look at the method names for more description.
+
+
+    // TC: O(log(mn)), SC: O(1)
+    public boolean searchMatrix_BinarySearch(int[][] matrix, int target) {
+        if (matrix.length == 0) return false;
+        int rows = matrix.length, cols = matrix[0].length;
+
+        int lo = 0, hi = rows * cols - 1;
+        while (lo <= hi) {
+            int mid = lo + (hi - lo) / 2;
+            int num = matrix[mid / cols][mid % cols];
+            if (num == target) return true;
+            else if (num < target) lo = mid + 1;
+            else hi = mid - 1;
+        }
+        return false;
+    }
+
+    // TC: O(mn + log(mn)), SC: O(mn)
+    public boolean searchMatrix_ConstructAnArray(int[][] matrix, int target) {
+        List<Integer> res = new ArrayList<>();
+        int rows = matrix.length, cols = matrix[0].length;
+        for (int i = 0; i < rows; i++) {
+            for (int j = 0; j < cols; j++) res.add(matrix[i][j]);
+        }
+        return Collections.binarySearch(res, target) >= 0;
+    }
+
+    // TC: O(m+n), SC: O(1)
+    public boolean searchMatrix_BottomLeft(int[][] matrix, int target) {
+        int rows = matrix.length, cols = matrix[0].length, i = rows - 1, j = 0;
+        while (i >= 0 && i < rows && j >= 0 && j < cols) {
+            int num = matrix[i][j];
+            if (num == target) return true;
+            if (num < target) j++;
+            else i--;
+        }
+        return false;
+    }
+
+    // TC: O(m+n), SC: O(1)
+    public boolean searchMatrix_TopRight(int[][] matrix, int target) {
+        int rows = matrix.length, cols = matrix[0].length, i = 0, j = cols - 1;
+        while (i >= 0 && i < rows && j >= 0 && j < cols) {
+            int num = matrix[i][j];
+            if (num == target) return true;
+            if (num < target) i++;
+            else j--;
+        }
+        return false;
+    }
+
+    // TC: O(mn), SC: O(1)
+    public boolean searchMatrix_BruteForce(int[][] matrix, int target) {
+        for (int i = 0; i < matrix.length; i++) {
+            for (int j = 0; j < matrix[0].length; j++) {
+                if (matrix[i][j] == target) return true;
+            }
+        }
+        return false;
+    }
+
+    // TC: O(mn), SC: O(1)
+    public boolean searchMatrix_BruteForce_EnhancedForLoop(int[][] matrix, int target) {
+        for (int[] rows : matrix) {
+            for (int num : rows) {
+                if (num == target) return true;
+            }
+        }
+        return false;
+    }
+
+```
