--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/240. Search a 2D Matrix II.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/2D/240. Search a 2D Matrix II.md
@@ -88,3 +88,64 @@ class Solution {
 }
 ```
 
+
+
+
+`` Binary Search but s<e not s<= e and  e = mid not e = mid-1``
+
+```java
+class Solution {
+    public boolean searchMatrix(int[][] matrix, int target) {
+        
+        for(int[]arr:matrix){
+            if(search(arr,target)==true){
+                return true;
+            }
+        }
+        return false;
+    }
+    
+    private boolean search(int [] arr , int t){
+        int s=0; 
+        int e=arr.length;
+        while(s<e){
+            int mid = (s+(e-s)/2);
+            if(arr[mid] == t){
+                return true;
+            }else if(arr[mid]>t){
+                e = mid;
+            }else{
+                s = mid+1;
+            }
+        }
+        return false;
+    }
+}
+
+```
+
+
+
+`` TLE   ``
+
+```java
+class Solution {
+    public String removeDuplicates(String s, int k) {
+        int count =1;
+        
+        for(int i=1; i<s.length(); i++){
+            if(s.charAt(i)==s.charAt(i-1)){
+                count++;
+            }else{
+                count=1;
+            }
+        if(count==k){
+            String Reduced = s.substring(0,i-k+1) + s.substring(i+1);
+            return removeDuplicates(Reduced,k);
+        }
+        }
+        
+        return s;
+    }
+}
+```
