--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Stack/739. Daily Temperatures.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Stack/739. Daily Temperatures.md
@@ -88,3 +88,56 @@ class Solution {
     }
 }
 ```
+
+
+`` optimal``
+
+```java
+class Solution {
+    public int[] dailyTemperatures(int[] temp) {
+        int  n = temp.length;
+        Stack<Integer>st = new Stack<>();
+        int [] ans = new int[n];
+        for(int i=0; i<n; i++){
+            while(!st.isEmpty() && temp[st.peek()]<temp[i]){
+                ans[st.peek()] = i-st.peek();
+                st.pop();
+            }
+            st.push(i);
+        }
+        return ans;
+    }
+}
+
+
+```
+
+``using pair class``
+
+```java
+class Solution {
+    class Pair{
+        int t;
+        int index;
+        Pair(int t , int index){
+            this.t = t;
+            this.index = index;
+        }
+    }
+    public int[] dailyTemperatures(int[] temp) {
+        int  n = temp.length;
+        Stack<Pair>st = new Stack<Pair>();
+        int [] ans = new int[n];
+        for(int i=n-1; i>=0; i--){
+            while(!st.isEmpty() && st.peek().t<=temp[i]){
+                st.pop();
+            }
+            if(!st.isEmpty() && st.peek().t > temp[i]){
+                ans[i]  = st.peek().index-i;
+            }
+             st.push(new Pair(temp[i],i));
+        }
+        return ans;
+    }
+}
+```
