stack and hashmap

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Stack/496. Next Greater Element I.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Stack/496. Next Greater Element I.md
@@ -125,3 +125,27 @@ class Solution {
 ```
 
 
+``hashmap & stack``
+
+```java
+class Solution {
+    public int[] nextGreaterElement(int[] nums1, int[] nums2) {
+        HashMap<Integer,Integer> map = new HashMap();
+        Stack<Integer> helperStack = new Stack();
+     
+        for(Integer num: nums2){
+            while(!helperStack.isEmpty() && helperStack.peek()<num){
+                map.put(helperStack.pop(), num);
+            }
+            helperStack.push(num);
+        }
+        
+        for(int idx =0; idx<nums1.length; idx++){
+            nums1[idx] = map.getOrDefault(nums1[idx],-1);
+        }
+        return nums1;
+    }
+}
+
+```
+
