bst recursive and bfs

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Binary Search Tree/BST - Recursion/653. Two Sum IV - Input is a BST.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Binary Search Tree/BST - Recursion/653. Two Sum IV - Input is a BST.md
@@ -70,3 +70,84 @@ class Solution {
 ​
 }
 ```
+
+
+
+``Method 2: while traversive each node store that node's val in hashmap, and check if k-node's val is present in hashmap or not.``
+```java
+class Solution {
+    HashMap<Integer,Integer> hm=new HashMap<>();
+    public boolean findTarget(TreeNode root, int k){
+        if(root==null){
+            return false;
+        }
+        if(hm.containsKey(k-root.val)){
+            return true;
+        }
+        hm.put(root.val,0);
+        return findTarget(root.left,k)||findTarget(root.right,k);
+    }
+     
+}
+```
+
+
+``Iterative using Queue(BFS)``
+```java
+class Solution {
+    
+    public boolean findTarget(TreeNode root, int k) {
+        Queue<TreeNode> q=new LinkedList<>();
+        q.add(root);
+        ArrayList<Integer> list=new ArrayList<>();
+        while(!q.isEmpty()){
+            int n=q.size();
+            for(int i=0;i<n;i++){
+                TreeNode temp=q.poll();
+                list.add(temp.val);
+                if(temp.left!=null){
+                    q.add(temp.left);
+                }
+                if(temp.right!=null){
+                    q.add(temp.right);
+                }
+            }
+        }
+        
+        System.out.println(list);
+        for(int i=0;i<list.size();i++){
+            if(list.contains(k-list.get(i)) && (2*list.get(i)!=k)){
+                return true;
+            }
+        }
+        return false;
+        
+    }
+	}
+```
+
+
+```java
+Iterative:
+
+public boolean findTarget(TreeNode node, int k) {
+        if(node==null)return false;
+        Set<Integer> lst = new HashSet<Integer>();
+        Deque<TreeNode> q = new LinkedList<TreeNode>();
+        q.add(node);
+        while(!q.isEmpty()){
+            int size = q.size();
+            for(int i = 0; i<size;i++){
+                TreeNode t = q.poll();
+                if(t == null)continue;
+                if(lst.contains(t.val))return true;
+                else{
+                    lst.add(k-t.val);
+                }
+                q.add(t.left);
+                q.add(t.right);
+            }
+        }
+        return false;
+    }
+```
