--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Tree - Recursion/236. Lowest Common Ancestor of a Binary Tree.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Tree - Recursion/236. Lowest Common Ancestor of a Binary Tree.md
@@ -79,3 +79,34 @@ class Solution {
     }
 }
 ```
+
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if(root==null || root.val == p.val || root.val == q.val){
+         return root;   
+        }
+        
+        TreeNode left =lowestCommonAncestor(root.left , p ,q );
+        TreeNode right = lowestCommonAncestor(root.right,p,q);
+        
+        // result
+        if(left==null)
+            return right;
+       else if(right==null)
+            return left;
+        else  // if both not null then we found our result
+        return root;
+    }
+}
+```
