--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Binary Search Tree/BST - Recursion/235. Lowest Common Ancestor of a Binary Search Tree.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Tree/Binary Search Tree/BST - Recursion/235. Lowest Common Ancestor of a Binary Search Tree.md
@@ -61,7 +61,7 @@ Language: **Java**
  *     TreeNode(int x) { val = x; }
  * }
  */
-​
+​// self try 
 class Solution {
     public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
         if(root==null || root.val == p.val || root.val == q.val){
@@ -83,5 +83,32 @@ class Solution {
         
         return root;
     }
+}
+```
+
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+
+class Solution {
+    public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+        if(root==null) return null;
+        
+        int curr = root.val;
+        if(curr<p.val && curr<q.val){
+            return lowestCommonAncestor(root.right , p , q);
+        }
+        if(curr>p.val &&  curr>q.val){
+            return lowestCommonAncestor(root.left , p ,q );
+        }
+        return root;
+    }
 }
 ```
