--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Array - Sorting - Other/15. 3Sum.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Array - Sorting - Other/15. 3Sum.md
@@ -191,3 +191,34 @@ Sc -> O(m) OR O(1);
 */
 
 ```
+
+
+``to high Runtime: 1511 ms, faster than 5.25% of Java online submissions for 3Sum.`` 
+```java
+class Solution {
+    // Tc -> O(n*n + logm) logm is using hashset.  Sc = O(logm); using hashset. or O(m); 
+    public List<List<Integer>> threeSum(int[] nums) {
+        // hashset for ignoring duplicate.
+        HashSet<List<Integer>> set = new HashSet<>();
+        Arrays.sort(nums);
+        int n = nums.length;
+        for(int i=0; i<n-2; i++){ // n-2 because 3 triplate want.
+            int lo = i+1;
+            int hi = n-1;
+            
+            while(lo<hi){
+                int sum = nums[lo] +nums[hi];
+                if(sum==-(nums[i])){
+                    set.add(Arrays.asList(nums[i],nums[lo++],nums[hi--])); 
+                    // we can also use there while loop instead of hashet for ignoring duplicate.
+                }else if(sum>-nums[i]){
+                    hi--;
+                }else if(sum<-nums[i]){
+                    lo++;
+                }
+            }
+        }
+        return new ArrayList<>(set);
+    }
+}
+```
