brute & optimal algorithms

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Array - Sorting - Other/18. 4Sum.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Array - Sorting - Other/18. 4Sum.md
@@ -262,3 +262,41 @@ class Solution {
 // TC: O(n * logn) + O(n ^ 3) => O(n ^ 3)
 // SC: O(1) - ignoring the output array
 ```
+
+
+``Algorithm``
+
+If length of nums is less than 4, then simply return a empty list.
+Make a HashSet so that we can add unique lists.
+Sort array
+Start a first for loop till length-3, another for loop from length-1 till i
+Make j and k pointer as i+1, and l-1 respectively. (Now you will have 4 pointers, i and j at starting, while k and l at ending where j and k will move while i and j will be fixed)
+Start a while loop until j is equal to k
+If sum of 4 pointers value in nums is equal to target, simply add them in set as list with incrementing j and decrementing k
+If sum is less than target, increment j
+If sum is greater than targe, decrement k
+Return set as list.
+Code
+
+```java
+public List<List<Integer>> fourSum(int[] nums, int target) {
+        if(nums.length < 4) return Collections.emptyList();
+        
+        Set<List<Integer>> set = new HashSet();
+        Arrays.sort(nums);
+        
+        for(int i=0; i<nums.length-3; i++){
+            for(int l=nums.length-1; l>i; l--){
+                int j = i+1;
+                int k = l-1;
+                while(j<k){
+                    int sum = nums[i]+nums[j]+nums[k]+nums[l];
+                    if(sum == target) set.add(Arrays.asList(nums[i], nums[j++],nums[k--], nums[l]));
+                    else if(sum < target) j++;
+                    else if(sum > target) k--;
+                }
+            }
+        }
+        return new ArrayList<>(set);
+    }
+```
