middle remove many approaches

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Linked List/2095. Delete the Middle Node of a Linked List.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Linked List/2095. Delete the Middle Node of a Linked List.md
@@ -93,3 +93,96 @@ class Solution {
 ```
 
 
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode deleteMiddle(ListNode head) {
+        if(head==null) return null;
+        if(head.next==null) return null;
+        ListNode prev = null;
+        ListNode slow  = head;
+        ListNode fast = head;
+        while(fast!=null && fast.next!=null){
+            prev = slow;
+            slow = slow.next;
+            fast=fast.next.next;
+        }
+        
+        prev.next = slow.next;
+        
+        return head;
+    }
+}
+
+``Runtime: 4 ms, faster than 95.41% of Java online submissions for Delete the Middle Node of a Linked List.
+Memory Usage: 63.3 MB, less than 89.63% of Java online submissions for Delete the Middle Node of a Linked List.``
+
+```java
+// less memory and run time
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode deleteMiddle(ListNode head) {
+        if(head.next==null) return (head=null);
+        ListNode fast = head, slow  = head, prev = null;
+        while(fast!=null && fast.next!=null){
+            fast=fast.next.next;
+            prev = slow;
+            slow = slow.next;
+        }
+        prev.next = prev.next.next;
+        
+        return head;
+    }
+}
+```
+**without third variable** 
+
+```java
+// memory usage high but 5ms run time. and without third variable
+// Runtime: 5 ms, faster than 72.77% of Java online submissions for Delete the Middle Node of a Linked List.
+// Memory Usage: 222.2 MB, less than 39.84% of Java online submissions for Delete the Middle Node of a Linked List.
+
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode() {}
+ *     ListNode(int val) { this.val = val; }
+ *     ListNode(int val, ListNode next) { this.val = val; this.next = next; }
+ * }
+ */
+class Solution {
+    public ListNode deleteMiddle(ListNode head) {
+        if(head.next==null) return (head=null);
+        ListNode fast = head.next.next, slow  = head;
+        while(fast!=null && fast.next!=null){
+            slow = slow.next;
+            fast=fast.next.next;
+        }
+        slow.next = slow.next.next;
+        
+        return head;
+    }
+}
+```
+
+
