using hashmap and sorting and converting charcter and string

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/Medium/49. Group Anagrams.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/String - Problem/Medium/49. Group Anagrams.md
@@ -67,3 +67,94 @@ class Solution {
 ```
 
 *so in that step i followed is. i have create a hashmap of string and list of string because question required to return list of string so i created into hashamp. then i  into string array i retrive a first string and then that string i converted into charadcter array and then sort it character array and then from that sorted character array i put into hashmap. if hashamp contains that string then add into string list else not contains then just put into the hashamp as a string *
+
+
+
+**sorted and valueOf**
+```java
+ public List<List<String>> groupAnagrams(String[] strs) {
+        if (strs == null || strs.length == 0) return new ArrayList<>();
+        Map<String, List<String>> map = new HashMap<>();
+        for (String s : strs) {
+            char[] ca = s.toCharArray();
+            Arrays.sort(ca);
+            String keyStr = String.valueOf(ca);
+            if (!map.containsKey(keyStr)) map.put(keyStr, new ArrayList<>());
+            map.get(keyStr).add(s);
+        }
+        return new ArrayList<>(map.values());
+    }
+```
+
+**also can do like that**
+```java
+  public List<List<String>> groupAnagrams(String[] strs) {
+        if (strs == null || strs.length == 0) return new ArrayList<>();
+        Map<String, List<String>> map = new HashMap<>();
+        for (String s : strs) {
+            char[] ca = new char[26];
+            for (char c : s.toCharArray()) ca[c - 'a']++;
+            String keyStr = String.valueOf(ca);
+            if (!map.containsKey(keyStr)) map.put(keyStr, new ArrayList<>());
+            map.get(keyStr).add(s);
+        }
+        return new ArrayList<>(map.values());
+    } 
+```
+
+```java
+// ime Complexity: O(n * klog(k)) since we are sorting k characters n times in the loop.
+```
+
+
+```java
+public static List<List<String>> groupAnagrams(String[] strs) {
+        HashMap<String, List<String>> map = new HashMap<>();
+
+        for (int i = 0; i < strs.length; i++) {
+            String s1 = strs[i];
+            char[] arr = s1.toCharArray();
+            Arrays.sort(arr);
+            String str = new String(arr);
+
+            if (!map.containsKey(str)) {
+                map.put(str, new ArrayList<>());
+            }
+            map.get(str).add(s1);
+        }
+        return new ArrayList<>(map.values());
+}
+```
+
+```java 
+// easy solution
+public static List<List<String>> groupAnagrams(String[] strs) {
+        HashMap<String, List<String>> map = new HashMap<>();
+
+        for (int i = 0; i < strs.length; i++) {
+            String s1 = strs[i];
+            char[] arr = s1.toCharArray();
+            Arrays.sort(arr);
+            String str = new String(arr);
+
+            if (!map.containsKey(str)) {
+                map.put(str, new ArrayList<>());
+            }
+            map.get(str).add(s1);
+        }
+        return new ArrayList<>(map.values());
+}
+```
+
+```java
+Time Complexity  O(n mlogm) 
+O(n) for iterating to the whole string array
+o(mlogm) for converting to the char array and sorting the array
+
+Space Complexity : O(n*m) 
+space
+
+map.computeIfPresent(key, (k, value) ->{ value.add(s);     return value;
+                                       });
+            
+map.putIfAbsent(key, new ArrayList<String>(){{add(s);}});
