--- a/Interview Ready Solution/Preparation 🔥/LeetCode/String/Easy/1935. Maximum Number of Words You Can Type.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/String/Easy/1935. Maximum Number of Words You Can Type.md
@@ -70,3 +70,53 @@ class Solution {
     }
 }
 ```
+
+**using hashmap**
+
+```java
+class Solution {
+    public int canBeTypedWords(String text, String brokenLetters) {
+        String[] splt = text.split(" ");
+        int count  = 0;
+        Map<Character,Integer> map = new HashMap<>();
+        
+        for(Character c : brokenLetters.toCharArray()){
+            map.put(c,1);
+        }
+
+        for(String s : splt){
+            boolean flag = true;
+            for(int i = 0;i < s.length(); i++){
+                if(map.containsKey(s.charAt(i))){
+                    flag = false;
+                    break;
+                }
+            }
+            if(flag){
+                count++;
+            }
+        }
+        return count;
+        }  
+    }
+
+```
+
+```java
+class Solution {
+    public int canBeTypedWords(String text, String brokenLetters) {
+        String words[] = text.split(" ");
+        int count = 0;
+        for(String word : words){
+            for(int i=0; i<word.length(); i++){
+                if(brokenLetters.contains(word.charAt(i) + "")){
+                    count++;
+                    break;
+                }
+            }
+        }
+        return words.length - count;
+    }
+
+}
+```
