--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Greedy/Easy/605. Can Place Flowers.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Greedy/Easy/605. Can Place Flowers.md
@@ -68,3 +68,29 @@ class Solution {
 so. edge case.
 ​
 ```
+
+
+```java
+/*
+
+1 0 0 0 1  = n  = 1;
+
+1 0 1 0 1   ? not violating. 
+
+2nd example.
+1 0 0 0 1 n = 2;
+
+1 1 1 0 1  ? violated.
+1 0 1 1 1  ? violated. 
+
+so. edge case.
+
+n== 0 nothing to  plant return true;
+2. [0,0,1,0] flowr can be placed in 1st position..
+3. [0,1,0,0] flowr can be placed in last position..
+4. flower can be placed in middle  [1,0,1,0,1].
+
+Tc O(n)  sc O(1);
+*/
+
+```
