--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Sliding Windows/674. Longest Continuous Increasing Subsequence.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Sliding Windows/674. Longest Continuous Increasing Subsequence.md
@@ -74,3 +74,28 @@ check previous smaller then current. then increasing count.
 if not then just set max count and then return it max count.
 */
 ```
+
+
+
+
+```java
+class Solution {
+    public int findLengthOfLCIS(int[] nums) {
+        int count =1;
+        int maxCount =0;
+        
+        for(int i=1; i<nums.length; i++){
+            if(nums[i-1]<nums[i]){
+                count++;
+            }else{
+                maxCount = Math.max(maxCount,count);
+                count=1;
+            }
+        }
+        
+        return Math.max(maxCount,count);
+    }
+}
+
+
+```
