--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Math/Easy/495. Teemo Attacking.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Math/Easy/495. Teemo Attacking.md
@@ -112,3 +112,144 @@ if( 2<=3) ? yes.
 ​
 */
 ```
+
+
+```java
+/*
+    Calculate total duration of attacks from teemo
+    If next attack occurs before current duration ends, include the difference
+    Time: O(n)
+    Space: O(1)
+*/
+class Solution {
+    public int findPoisonedDuration(int[] timeSeries, int duration) {
+        int total = 0;
+        for (int i = 0; i < timeSeries.length-1; i++) {
+            // if next attack occurs before current duration ends, include the difference
+            if (timeSeries[i+1] <= timeSeries[i] + duration-1) {
+                total += timeSeries[i+1] - timeSeries[i];
+            } else { // add duration normally
+                total += duration;
+            }
+        }
+        total += duration; // include last attack from teemo
+        return total;
+    }
+}
+
+```
+
+```java
+We need to find the time for which opponent was poisoned.
+Therefore,
+
+If array is empty, return 0
+As the timeframes are in ascending order, we find Minimum of duration and timeSeries[i] - timeSeries[i-1]. This is because either he will be poisoned for complete duration, or till he was poisoned again.
+At the last timeframe, the opponent will be poisoned for the complete duration. So, add duration at the end.
+class Solution {
+
+public int findPoisonedDuration(int[] timeSeries, int duration) {
+    
+    int pTime = 0;
+    
+	// If array is empty, return 0
+    if(timeSeries.length == 0)
+        return 0;
+    
+    for(int i = 1; i < timeSeries.length; i++) {
+        
+		// Find minimum of duration and difference between timeframes.
+        pTime += Math.min(duration, timeSeries[i] - timeSeries[i-1]);
+        
+    }
+    
+	// Add the last complete duration of poisoned
+    pTime += duration;
+    
+    return pTime;
+    
+}
+}
+```
+
+```java
+class Solution {
+    public int findPoisonedDuration(int[] timeSeries, int duration) {
+        
+        int im1v9 = 0;
+        
+        for(int i = 0; i < timeSeries.length - 1; i++){
+            int start = timeSeries[i];
+            int end = timeSeries[i + 1];
+            
+            int inter = end - start;
+            if(start + duration > end){
+                im1v9 += inter;
+            }else{
+                im1v9 += duration;
+            }
+        }
+        
+        // add at the end for the last INTer
+        return im1v9 + duration;
+    }
+    
+}
+
+```
+
+```java
+dea:
+
+An attack's effect ends at t = timeSeries[i] + duration - 1 seconds, so if the next attack is after t, then entire duration is counted
+Else timeSeries[i + 1] - timeSeries[i] is counted
+The final attack lasts for full duration
+T/S: O(n)/O(1)
+
+public int findPoisonedDuration(int[] timeSeries, int duration) {
+	var poisoned = 0;
+	for (var i = 0; i + 1 < timeSeries.length; i++)
+		if (timeSeries[i] + duration - 1 < timeSeries[i + 1])
+			poisoned += duration;
+		else
+			poisoned += timeSeries[i + 1] - timeSeries[i];
+			
+	return poisoned + duration;
+}
+Version 2: The above can be simplified to:
+
+public int findPoisonedDuration(int[] timeSeries, int duration) {
+	var poisoned = duration;
+	
+	for (var i = 0; i + 1 < timeSeries.length; i++)
+		poisoned += Math.min(duration, timeSeries[i + 1] - timeSeries[i]);
+	
+	return poisoned;
+}
+
+```
+
+
+```java
+// AC: Runtime: 1 ms, faster than 100.00% of Java online submissions for Teemo Attacking.
+// Memory Usage: 40.8 MB, less than 82.64% of Java online submissions for Teemo Attacking.
+// .
+// T:o(n), S:O(1)
+//
+class Solution {
+    public int findPoisonedDuration(int[] timeSeries, int duration) {
+        int ret = 0, size = timeSeries.length, lastEnd = -1;
+        for (int timeSery : timeSeries) {
+            ret += duration;
+            if (timeSery <= lastEnd) {
+                ret -= (lastEnd - timeSery + 1);
+            }
+            lastEnd = timeSery + duration - 1;
+        }
+
+        return ret;
+    }
+}
+
+```
+
