--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Math/Easy/728. Self Dividing Numbers.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Math/Easy/728. Self Dividing Numbers.md
@@ -65,3 +65,19 @@ class Solution {
     }
 }
 ```
+
+
+
+
+
+
+```java
+why rem==0 in if condition?
+
+
+Basically the number shouldn't contain any zeroes. So, this check removes numbers which has zeroes.
+
+
+because if the rem =0, it is math error as the number cannot devide by 0
+
+```
