--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/Easy/2441. Largest Positive Integer That Exists With Its Negative.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/Easy/2441. Largest Positive Integer That Exists With Its Negative.md
@@ -87,3 +87,135 @@ map put. OK ..
 ​
 in that case.
 ```
+
+
+
+```java
+public int findMaxK(int[] nums) {
+    HashSet<Integer> st = new HashSet<>();
+    for (int i : nums) st.add(i);
+    int res = -1;
+    for (int p : nums)
+	     if (p > 0 && st.contains(-p)) res = Math.max(res, p);
+    return res;
+}
+
+```
+
+```java
+Solution one, using sorting and hashset..
+First, the array is sorted in ascending order and all the elements of the array are stored in a hashset. Then the sorted array is traversed from the end to the 0 index and whenever we found an element whose negative is also present in the hash set, we return the ans. Else returning -1 in the end.
+
+class Solution {
+    public int findMaxK(int[] nums) {
+        Arrays.sort(nums);
+        HashSet<Integer> set = new HashSet<>();
+        for(int i = 0 ; i < nums.length ; i++){
+            set.add(nums[i]);
+        }
+        for(int i = nums.length-1; i>=0 ; i--){//Checking the largest numbers from the last index as the array is sorted
+            if(set.contains(-nums[i])){
+                return nums[i];
+            }
+        }
+        return -1;
+    }
+}
+Time Complexity: O(n Log n)
+Now optimizing the code...
+First traversing the entire array and adding all the elements in the hash set. Then initially assuming the ans as -1, iterating through the array and checking for every element whether it is greater than the current ans and its negative is also present in the hash set. Returning this answer variable in the end.
+
+class Solution {
+    public int findMaxK(int[] nums) {
+        Set<Integer> set = new HashSet<>();
+        for (int i = 0; i < nums.length; i++){
+            set.add(nums[i]);
+			}
+        int ans = -1;
+        for (int i = 0; i < nums.length; i++) {
+            if (nums[i] > ans && set.contains(-nums[i]))
+                ans = nums[i];
+        }
+        return ans;
+    }
+}
+Time Complexity: O(n)
+
+
+```
+
+
+```java
+class Solution {
+    public int findMaxK(int[] nums) {
+        int largest = -1;
+        Arrays.sort(nums); //Sort Array
+        int l=0,r=nums.length-1;
+        while(l<r){
+            if(nums[l]+nums[r]==0 && nums[r]>largest)
+                largest=nums[r];
+            else if(nums[l]+nums[r]>0)
+                r--;
+            else
+                l++;
+        }
+        return largest;
+    }
+}
+
+```
+
+```java
+lass Solution {
+    public int findMaxK(int[] nums) {
+        Arrays.sort(nums);
+        int left = 0, right = nums.length-1;
+
+        while(left <= right){
+            if(nums[left]+ nums[right] == 0) return nums[right];
+            else if(nums[left]+ nums[right] > 0) right--;
+            else if(nums[left]+ nums[right] < 0) left++;
+        }
+        return -1;
+    }
+}
+
+```
+
+
+```java
+// doing binary search in this question.
+
+class Solution {
+    public int findMaxK(int[] nums) {
+        Arrays.sort(nums);
+        
+        int n = nums.length;
+        int max = -1;
+        for(int i=0; i<n; i++){
+            if(Arrays.binarySearch(nums,-nums[i])>=0){
+                max = Math.max(max,nums[i]);
+            }
+        }
+        return max;
+    }
+}
+
+/*
+-3 -1 2 3.
+0  1  2 3.
+
+System.out.print(Arrays.binarySearch(nums,-nums[i])>=0);
+
+true false false true
+
+-(-3) = 3. its present return true. -(3)=3. is present true.
+but we want max. so we keep doing the. max check till length.
+so its store last occurance.
+and last occurance will be greater value.
+because array is sorted.
+so that's case its return 3. 
+*/
+
+```
+
