hashmap , Co-Authored-By: not-just 114912156+not-just@users.noreply.github.com

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/Easy/219. Contains Duplicate II.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Hashmap/Easy/219. Contains Duplicate II.md
@@ -69,3 +69,20 @@ class Solution {
 ​
 */
 ```
+
+
+```java
+class Solution {
+    public boolean containsNearbyDuplicate(int[] nums, int k) {
+        if(k==0) return false;
+        HashMap<Integer,Integer>map = new HashMap<>();
+        for(int i=0; i<nums.length; i++){
+            if(map.containsKey(nums[i])&& i-map.get(nums[i])<=k){
+                return true;
+            }
+            else map.put(nums[i],i);
+        }
+        return false;
+    }
+}
+```
