Brute force both
both O(n); required O(logn);

Co-Authored-By: not-just <114912156+not-just@users.noreply.github.com>

--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Medium/153. Find Minimum in Rotated Sorted Array.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Medium/153. Find Minimum in Rotated Sorted Array.md
@@ -56,6 +56,7 @@ Explanation: The original array was [11,13,15,17] and it was rotated 4 times.
 Language: **Java**
 
 ```java
+// brute force
 class Solution {
     public int findMin(int[] nums) {
         
