--- a/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Medium/153. Find Minimum in Rotated Sorted Array.md
+++ b/Interview Ready Solution/Preparation 🔥/LeetCode/Binary Search/Medium/153. Find Minimum in Rotated Sorted Array.md
@@ -69,3 +69,53 @@ class Solution {
     }
 }
 ```
+
+
+```java
+class Solution {
+    public int findMin(int[] nums) {
+      int n = nums.length;
+        if(n==0) return -1;
+        if(n==1 || nums[0]<nums[n-1]) return nums[0];
+        if(n==2) return Math.min(nums[0],nums[1]);
+        
+        int s=0;
+        int e = n-1;
+        
+        while(s<=e){
+            int mid =(s+(e-s)/2);
+            if(mid>0 && nums[mid]<nums[mid-1]) return nums[mid];
+            else if(nums[mid]<nums[e])  e = mid-1;
+            else if(nums[mid]>nums[e])  s=mid+1;
+        }
+        
+        return -1;
+    }
+}
+
+/*
+- edge case.
+- ager length zero h to return -1; because no need to minimum element presnt. -1 hi minimum eske liye. 
+- if ager length 1 h to 1st element hi minimum h or ager array sorted h to first element hi minimum hoga to hum check kr lenge ki ager first element small h last index se to first ko hi return kr do.
+- if ager length 2 h to ek minimum to hoga hi. so that. we use math.min method and check which one is minimum or wo return kr denge.
+
+- ab simply binary search lagate hai.
+
+* while loop chalega jab tak apna start <= h end ke.
+- mid nikal lenege.
+- ab check karenge. ki ager apna mid chhota hua mid-1; se. mtlb ki ham
+as example. [3,4,5,1,2] apna mid 1 h or mid-1 5 h to 1 , 5 se small hai. to hum 1 ko return kr denge. yaha pe bhi ek edge case hoga. ho skta h mid 0 index pe aa jaye 
+or us case me mid-1 error dega out of bound ka. to hum check kr lenge. ki mid>0 ho.
+
+- ab next condition. ager mid chhotaa h end se. to hum sorted area me h. hume unsorted array me move krna hai. kyuki usi se hume pata chalega ki kaha pe rotate ho raha hai.
+to unsorted area me move krne ke liye hum end ko mid-1 kr denge.
+
+- ab next condition ager mid  bada h end se eska mtlb hum unsroted array me hai.
+ to ab hume aage move krna h unsorted area me jab tak ki hume smaller nahi mil jata.
+ to hum mid +1 kr denge start me.
+ 
+ so after a point hum mid hamara 1 pe hoga or hamara mid-1 5 pe hoga.
+
+*/
+
+```
